# car_environment

./: README.md
devel/: .catkin  local_setup.sh
devel/include/pointgrey_camera_driver/: PointGreyConfig.h
devel/include/roborts_msgs/: BonusStatus.h  GameStatus.h  GameSurvivor.h  GimbalModeRequest.h  GimbalModeResponse.h  GimbalRate.h  ObstacleMsg.h  ProjectileSupply.h  RobotBonus.h  RobotDamage.h  RobotStatus.h  ShootInfo.h  ShootState.h  SupplierStatus.h
devel/include/simulator/: CellStatus.h  GameState.h  GameStateRequest.h  GameStateResponse.h  ReferSystemInfo.h  RobotPose.h
devel/lib/obstacle_detector/: obstacle_extractor_node  obstacle_publisher_node  obstacle_tracker_node  scans_merger_node
devel/lib/pkgconfig/: controller.pc  description.pc  image_exposure_msgs.pc  obstacle_detector.pc  pointgrey_camera_description.pc  pointgrey_camera_driver.pc  roborts_base.pc  roborts_bringup.pc  roborts_common.pc  roborts_costmap.pc  roborts_decision.pc  roborts_localization.pc  roborts_msgs.pc  roborts_planning.pc  simulator.pc  statistics_msgs.pc  wfov_camera_msgs.pc
devel/lib/pointgrey_camera_driver/: camera_node  list_cameras  stereo_node
devel/lib/roborts_base/: roborts_base_node
devel/lib/roborts_costmap/: test_costmap
devel/lib/roborts_decision/: behavior_test_node
devel/lib/roborts_localization/: localization_node
devel/lib/roborts_planning/: global_planner_node  global_planner_test  vel_converter
devel/lib/simulator/: dynamic_obstacle  simulate_refer_system  turret_controller
devel/share/controller/cmake/: controllerConfig.cmake
devel/share/description/cmake/: descriptionConfig.cmake
devel/share/image_exposure_msgs/cmake/: image_exposure_msgs-msg-extras.cmake  image_exposure_msgs-msg-paths.cmake  image_exposure_msgsConfig.cmake
devel/share/obstacle_detector/cmake/: obstacle_detector-msg-extras.cmake  obstacle_detector-msg-paths.cmake  obstacle_detectorConfig.cmake
devel/share/pointgrey_camera_description/cmake/: pointgrey_camera_descriptionConfig.cmake
devel/share/pointgrey_camera_driver/cmake/: pointgrey_camera_driverConfig.cmake
devel/share/roborts_base/cmake/: roborts_baseConfig.cmake
devel/share/roborts_bringup/cmake/: roborts_bringupConfig.cmake
devel/share/roborts_common/cmake/: roborts_commonConfig.cmake
devel/share/roborts_costmap/cmake/: roborts_costmapConfig.cmake
devel/share/roborts_decision/cmake/: roborts_decisionConfig.cmake
devel/share/roborts_localization/cmake/: roborts_localizationConfig.cmake
devel/share/roborts_msgs/cmake/: roborts_msgs-msg-extras.cmake  roborts_msgs-msg-paths.cmake  roborts_msgsConfig.cmake
devel/share/roborts_planning/cmake/: roborts_planningConfig.cmake
devel/share/simulator/cmake/: simulator-msg-extras.cmake  (+2 more)
src/: readme.txt
src/RoboRTS/roborts_costmap/: CMakeLists.txt
src/RoboRTS/roborts_planning/: CMakeLists.txt
src/controller/: CMakeLists.txt
src/controller/config/: control.yaml  local_ekf.yaml
src/controller/include/mecanum_drive_controller/: gazebo_ros_mecanum_drive.h
src/controller/launch/: control.launch  teleop.launch
src/controller/src/: gazebo_ros_mecanum_drive.cpp
src/description/: CMakeLists.txt
src/description/launch/: description.launch
src/description/urdf/: accessories.urdf.xacro  custom_sensors.urdf.xacro  empty.urdf  robot.gazebo  robot.urdf.xacro
src/simulator/: CMakeLists.txt  package.xml
src/simulator/launch/: arena.launch  four_robots.launch  one_robot.launch  one_robot_obstacle.launch  robot_spawn.launch  robot_spawn_simple.launch
src/simulator/rviz/: robot_viz.rviz
src/simulator/src/: dynamic_obstacle.cpp  refer_system.cpp
src/simulator/worlds/: 2020Tag_obstacle.world
(+58 files in other folders)
